--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -127,6 +127,7 @@
         "jss-plugin-vendor-prefixer": "^10.9.2",
         "markdown-it": "^13.0.1",
         "monday-ui-react-core": "^1.92.0",
+        "primeflex": "^3.3.0",
         "query-string": "^7.1.1",
         "quill": "^1.3.7",
         "react-query": "^3.39.3",
