--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -134,12 +134,15 @@
         "rimraf": "^3.0.2",
         "rxjs": "^7.5.7",
         "rxjs-compat": "^6.6.7",
+        "sass": "^1.58.0",
+        "sass-loader": "^13.2.0",
         "shelljs": "^0.8.5",
         "style-loader": "^3.3.1",
         "to-string-loader": "^1.2.0",
         "ts-loader": "^9.4.1",
         "url-loader": "^4.1.1",
         "webpack": "^5.74.0",
+        "webpack-bundle-analyzer": "^4.7.0",
         "webpack-cli": "^4.10.0"
     },
     "dependencies": {
