--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -130,6 +130,7 @@
         "primeflex": "^3.3.0",
         "query-string": "^7.1.1",
         "quill": "^1.3.7",
+        "react-promise-suspense": "^0.3.3",
         "react-query": "^3.39.3",
         "rimraf": "^3.0.2",
         "rxjs": "^7.5.7",
