--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -132,6 +132,7 @@
         "quill": "^1.3.7",
         "react-promise-suspense": "^0.3.3",
         "react-query": "^3.39.3",
+        "react-router-dom": "^6.8.1",
         "rimraf": "^3.0.2",
         "rxjs": "^7.5.7",
         "rxjs-compat": "^6.6.7",
