--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tuval/forms",
-    "version": "0.0.627",
+    "version": "1.0.0",
     "description": "",
     "keywords": [],
     "main": "index.js",
@@ -130,9 +130,14 @@
         "primeflex": "^3.3.0",
         "query-string": "^7.1.1",
         "quill": "^1.3.7",
+        "ra-core": "^4.7.2",
+        "ra-data-json-server": "^4.7.2",
         "react-promise-suspense": "^0.3.3",
         "react-query": "^3.39.3",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.1",
+        "redux": "^4.2.1",
+        "reselect": "^4.1.7",
         "rimraf": "^3.0.2",
         "rxjs": "^7.5.7",
         "rxjs-compat": "^6.6.7",
