--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tuval/forms",
-    "version": "1.0.0",
+    "version": "1.0.1-beta.2",
     "description": "",
     "keywords": [],
     "main": "index.js",
