--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -117,6 +117,7 @@
         "dts-bundle-generator": "^6.13.0",
         "dts-bundle-webpack": "^1.0.2",
         "file-loader": "^6.2.0",
+        "framer-motion": "^9.0.4",
         "ifdef-loader": "^2.3.2",
         "jss": "^10.9.2",
         "jss-plugin-camel-case": "^10.9.2",
