--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -142,6 +142,7 @@
         "react-query": "^3.39.3",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.1",
+        "react-switch": "^7.0.0",
         "redux": "^4.2.1",
         "reselect": "^4.1.7",
         "rimraf": "^3.0.2",
