--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -107,6 +107,7 @@
     "devDependencies": {
         "@codemirror/lang-javascript": "^6.1.4",
         "@emotion/css": "^11.10.5",
+        "@svgr/webpack": "^6.5.1",
         "@tuval/cg": "^0.0.16",
         "@tuval/core": "^0.0.92",
         "@tuval/graphics": "^0.0.10",
@@ -135,6 +136,7 @@
         "monday-ui-react-core": "^1.92.0",
         "npm": "^9.5.0",
         "primeflex": "^3.3.0",
+        "primeicons": "^6.0.1",
         "query-string": "^7.1.1",
         "quill": "^1.3.7",
         "ra-core": "^4.7.2",
@@ -164,7 +166,6 @@
     "dependencies": {
         "@types/react": "^18.0.27",
         "http-server": "^14.1.1",
-        "primeicons": "^6.0.1",
         "primereact": "^9.0.0-beta.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
