--- a/graphics/package.json
+++ b/graphics/package.json
@@ -112,5 +112,9 @@
         "url-loader": "^4.1.1",
         "webpack": "^5.57.0",
         "webpack-cli": "^4.8.0"
+    },
+    "dependencies": {
+        "@tuval/cg": "^0.0.16",
+        "@tuval/core": "^0.0.103"
     }
 }
