--- a/core-graphics/package.json
+++ b/core-graphics/package.json
@@ -31,7 +31,7 @@
         "dts-bundle-generator": "^5.9.0",
         "file-loader": "^6.2.0",
         "ifdef-loader": "^2.3.0",
-        "shelljs": "^0.8.4",
+        "shelljs": "^0.8.5",
         "to-string-loader": "^1.1.6",
         "ts-loader": "^9.2.6",
         "typescript": "^4.4.3",
@@ -39,5 +39,8 @@
         "webpack": "^5.56.1",
         "webpack-cli": "^4.8.0",
         "webpack-conditional-loader": "^1.0.12"
+    },
+    "dependencies": {
+        "@tuval/core": "^0.0.103"
     }
 }
