--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tuval/forms",
-    "version": "1.0.1-beta.198",
+    "version": "1.0.1-beta.203",
     "description": "",
     "keywords": [],
     "main": "index.js",
@@ -105,6 +105,7 @@
         ]
     },
     "devDependencies": {
+        "@apollo/client": "^3.7.13",
         "@codemirror/lang-javascript": "^6.1.4",
         "@emotion/css": "^11.10.5",
         "@radix-ui/react-popover": "1.0.5",
@@ -123,6 +124,7 @@
         "dts-bundle-webpack": "^1.0.2",
         "file-loader": "^6.2.0",
         "framer-motion": "^9.0.4",
+        "graphql": "^16.6.0",
         "ifdef-loader": "^2.3.2",
         "install": "^0.13.0",
         "jss": "^10.9.2",
@@ -142,6 +144,7 @@
         "quill": "^1.3.7",
         "ra-core": "^4.7.2",
         "ra-data-json-server": "^4.7.2",
+        "react-async-hook": "^4.0.0",
         "react-promise-suspense": "^0.3.3",
         "react-query": "^3.39.3",
         "react-redux": "^8.0.5",
