--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tuval/forms",
-    "version": "1.0.1-beta.222",
+    "version": "1.0.1-beta.223",
     "description": "",
     "keywords": [],
     "main": "index.js",
@@ -136,7 +136,7 @@
         "jss-plugin-rule-value-function": "^10.9.2",
         "jss-plugin-vendor-prefixer": "^10.9.2",
         "markdown-it": "^13.0.1",
-        "monday-ui-react-core": "^1.92.0",
+        "monday-ui-react-core": "1.124.1",
         "npm": "^9.5.0",
         "primeflex": "^3.3.0",
         "primeicons": "^6.0.1",
@@ -145,6 +145,7 @@
         "ra-core": "^4.7.2",
         "ra-data-json-server": "^4.7.2",
         "react-async-hook": "^4.0.0",
+        "react-hook-form": "^7.43.9",
         "react-promise-suspense": "^0.3.3",
         "react-query": "^3.39.3",
         "react-redux": "^8.0.5",
