--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tuval/forms",
-    "version": "1.0.1-beta.223",
+    "version": "1.0.1-beta.230",
     "description": "",
     "keywords": [],
     "main": "index.js",
@@ -140,6 +140,7 @@
         "npm": "^9.5.0",
         "primeflex": "^3.3.0",
         "primeicons": "^6.0.1",
+        "primereact": "^9.3.1",
         "query-string": "^7.1.1",
         "quill": "^1.3.7",
         "ra-core": "^4.7.2",
@@ -171,7 +172,6 @@
     "dependencies": {
         "@types/react": "^18.0.27",
         "http-server": "^14.1.1",
-        "primereact": "^9.0.0-beta.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "trackjs": "^3.10.1"
