--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tuval/forms",
-    "version": "1.0.1-beta.230",
+    "version": "1.0.1-beta.233",
     "description": "",
     "keywords": [],
     "main": "index.js",
@@ -170,10 +170,16 @@
         "webpack-visualizer-plugin": "^0.1.11"
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.0.8",
+        "@dnd-kit/modifiers": "^6.0.1",
+        "@dnd-kit/sortable": "^7.0.2",
+        "@dnd-kit/utilities": "^3.2.1",
         "@types/react": "^18.0.27",
+        "history": "^5.3.0",
         "http-server": "^14.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-sortable-hoc": "^2.0.0",
         "trackjs": "^3.10.1"
     }
 }
