--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tuval/forms",
-    "version": "1.0.1-beta.251",
+    "version": "1.0.1-beta.254",
     "description": "",
     "keywords": [],
     "main": "index.js",
@@ -136,7 +136,6 @@
         "jss-plugin-rule-value-function": "^10.9.2",
         "jss-plugin-vendor-prefixer": "^10.9.2",
         "markdown-it": "^13.0.1",
-        "monday-ui-react-core": "1.124.1",
         "npm": "^9.5.0",
         "primeflex": "^3.3.0",
         "primeicons": "^6.0.1",
@@ -167,7 +166,8 @@
         "webpack": "^5.74.0",
         "webpack-bundle-analyzer": "^4.7.0",
         "webpack-cli": "^4.10.0",
-        "webpack-visualizer-plugin": "^0.1.11"
+        "webpack-visualizer-plugin": "^0.1.11",
+        "monday-ui-react-core": "1.129.1"
     },
     "dependencies": {
         "@dnd-kit/core": "^6.0.8",
@@ -177,6 +177,7 @@
         "@types/react": "^18.0.27",
         "history": "^5.3.0",
         "http-server": "^14.1.1",
+        
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-sortable-hoc": "^2.0.0",
