--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tuval/forms",
-    "version": "1.0.1-beta.270",
+    "version": "1.0.1-beta.271",
     "description": "",
     "keywords": [],
     "main": "index.js",
@@ -113,7 +113,7 @@
         "@tuval/cg": "^0.0.16",
         "@tuval/core": "^0.0.92",
         "@tuval/graphics": "^0.0.10",
-        "@uiw/react-codemirror": "^4.19.9",
+        "@uiw/react-codemirror": "^4.21.3",
         "apexcharts": "^3.35.5",
         "arraybuffer-loader": "^1.0.8",
         "bootstrap-switch-button-react": "^1.2.0",
@@ -170,6 +170,7 @@
         "webpack-visualizer-plugin": "^0.1.11"
     },
     "dependencies": {
+        "@codemirror/lang-json": "^6.0.1",
         "@dnd-kit/core": "^6.0.8",
         "@dnd-kit/modifiers": "^6.0.1",
         "@dnd-kit/sortable": "^7.0.2",
