--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tuval/forms",
-    "version": "1.0.1-beta.271",
+    "version": "1.0.1-beta.272",
     "description": "",
     "keywords": [],
     "main": "index.js",
@@ -179,6 +179,7 @@
         "history": "^5.3.0",
         "http-server": "^14.1.1",
         "nanoid": "^4.0.2",
+        "object-path": "^0.11.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-sortable-hoc": "^2.0.0",
