--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tuval/forms",
-    "version": "1.0.1-beta.272",
+    "version": "1.0.1-beta.283",
     "description": "",
     "keywords": [],
     "main": "index.js",
@@ -105,7 +105,6 @@
         ]
     },
     "devDependencies": {
-        "@apollo/client": "^3.7.13",
         "@codemirror/lang-javascript": "^6.1.4",
         "@emotion/css": "^11.10.5",
         "@radix-ui/react-popover": "1.0.5",
@@ -176,6 +175,7 @@
         "@dnd-kit/sortable": "^7.0.2",
         "@dnd-kit/utilities": "^3.2.1",
         "@types/react": "^18.0.27",
+        "handlebars": "^4.7.7",
         "history": "^5.3.0",
         "http-server": "^14.1.1",
         "nanoid": "^4.0.2",
