--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tuval/forms",
-    "version": "1.0.25",
+    "version": "1.0.56",
     "description": "",
     "keywords": [],
     "main": "index.js",
@@ -135,7 +135,6 @@
         "jss-plugin-rule-value-function": "^10.9.2",
         "jss-plugin-vendor-prefixer": "^10.9.2",
         "markdown-it": "^13.0.1",
-        "monday-ui-react-core": "1.129.1",
         "npm": "^9.5.0",
         "primeflex": "^3.3.0",
         "primeicons": "^6.0.1",
@@ -179,6 +178,7 @@
         "history": "^5.3.0",
         "http-server": "^14.1.1",
         "json-beautify": "^1.1.1",
+        "monday-ui-react-core": "^2.26.0",
         "nanoid": "^4.0.2",
         "object-path": "^0.11.8",
         "react": "^18.2.0",
