--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tuval/forms",
-    "version": "1.0.73",
+    "version": "1.0.88",
     "description": "",
     "keywords": [],
     "main": "index.js",
@@ -174,6 +174,7 @@
         "@dnd-kit/sortable": "^7.0.2",
         "@dnd-kit/utilities": "^3.2.1",
         "@types/react": "^18.0.27",
+        "dayjs": "^1.11.9",
         "handlebars": "^4.7.7",
         "history": "^5.3.0",
         "http-server": "^14.1.1",
