--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tuval/forms",
-    "version": "1.0.105",
+    "version": "1.0.110",
     "description": "",
     "keywords": [],
     "main": "index.js",
@@ -138,7 +138,6 @@
         "npm": "^9.5.0",
         "primeflex": "^3.3.0",
         "primeicons": "^6.0.1",
-        "primereact": "^9.3.1",
         "query-string": "^7.1.1",
         "quill": "^1.3.7",
         "ra-core": "^4.7.2",
@@ -146,7 +145,6 @@
         "react-async-hook": "^4.0.0",
         "react-hook-form": "^7.43.9",
         "react-promise-suspense": "^0.3.3",
-        "react-query": "^3.39.3",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.1",
         "react-switch": "^7.0.0",
@@ -173,6 +171,7 @@
         "@dnd-kit/modifiers": "^6.0.1",
         "@dnd-kit/sortable": "^7.0.2",
         "@dnd-kit/utilities": "^3.2.1",
+        "@tanstack/react-query": "^4.35.7",
         "@types/react": "^18.0.27",
         "dayjs": "^1.11.9",
         "handlebars": "^4.7.7",
@@ -182,6 +181,7 @@
         "monday-ui-react-core": "^2.26.0",
         "nanoid": "^4.0.2",
         "object-path": "^0.11.8",
+        "primereact": "^10.0.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-sortable-hoc": "^2.0.0",
