--- a/forms-react/package.json
+++ b/forms-react/package.json
@@ -112,7 +112,6 @@
         "@tuval/cg": "^0.0.16",
         "@tuval/core": "^0.0.92",
         "@tuval/graphics": "^0.0.10",
-        "@uiw/react-codemirror": "^4.21.3",
         "apexcharts": "^3.35.5",
         "arraybuffer-loader": "^1.0.8",
         "bootstrap-switch-button-react": "^1.2.0",
@@ -181,7 +180,7 @@
         "monday-ui-react-core": "^2.26.0",
         "nanoid": "^4.0.2",
         "object-path": "^0.11.8",
-        "primereact": "^10.0.7",
+        "primereact": "10.2.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-sortable-hoc": "^2.0.0",
